# pytest-print

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README.rst  azure-pipelines.yml  azure-run-tox-env.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini  tox.toml  whitelist.txt
.github/: FUNDING.yml  SECURITY.md
.github/workflows/: check.yaml  check.yml  release.yaml  release.yml
doc/: changelog.rst  conf.py  index.rst  requirements.txt
doc/static/: custom.css
src/: pytest_print.py
src/pytest_print/: __init__.py
tests/: __init__.py  conftest.py  example.py  example2.py  example3.py  example_create_pretty_print.py  example_pretty_print.py  example_print.py  test_create_pretty_print.py  test_pprint_factory.py  test_pprint_pprinter.py  test_pretty_print.py  test_print.py  test_print_factory.py  test_print_pprinter.py
