[build-system]
build-backend = 'setuptools.build_meta'
requires = [
  "setuptools>=67.6.1",
  "setuptools_scm>=7.1",
]

[tool.setuptools_scm]
write_to = "src/pytest_print/version.py"
write_to_template = """
\"\"\" Version information \"\"\"

__version__ = "{version}"
"""

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_first_party = ["pytest_print"]
