[metadata]
name = pytest-print
description = pytest-print adds the printer fixture you can use to print messages to the user (directly to the pytest runner, not stdout)
long_description = file: README.rst
keywords = pytest, print, debug
maintainer = Bernat Gabor
author = Bernat Gabor
maintainer-email = gaborjbernat@gmail.com
url = https://pytest-print.readthedocs.io/en/latest/
project_urls =
    Source=https://github.com/pytest-dev/pytest-print
    Tracker=https://github.com/pytest-dev/pytest-print/issues
classifiers = Development Status :: 5 - Production/Stable
              Environment :: Plugins
              Intended Audience :: Developers
              License :: OSI Approved :: MIT License
              Operating System :: POSIX
              Operating System :: Microsoft :: Windows
              Operating System :: MacOS :: MacOS X
              Topic :: Software Development :: Testing
              Topic :: Software Development :: Libraries
              Topic :: Utilities
              Programming Language :: Python :: 2
              Programming Language :: Python :: 2.7
              Programming Language :: Python :: 3
              Programming Language :: Python :: 3.4
              Programming Language :: Python :: 3.5
              Programming Language :: Python :: 3.6
              Programming Language :: Python :: 3.7
              Framework :: Pytest
platforms = any
license_file = LICENSE.txt

[options]
zip_safe = True
packages = find:
include_package_data = True
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
install_requires = pytest >= 3.0.0, <5
                   six >= 1.10.0, <2
                   typing >= 3.6.4, <4; python_version < "3.5"

[options.entry_points]
pytest11 = pytest_print = pytest_print

[options.extras_require]
test = pytest >= 3.5.0, < 5
       coverage >= 4.5.2, <5
docs = Sphinx >= 1.7.2, < 2

[options.packages.find]
where = src

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[flake8]
max-line-length = 120
ignore = F401, H301, E203

[coverage:run]
branch = true
parallel = true

[coverage:report]
skip_covered = False
show_missing = True
exclude_lines =
    \#\s*pragma: no cover
    ^\s*raise AssertionError\b
    ^\s*raise NotImplementedError\b
    ^\s*return NotImplemented\b
    ^\s*raise$
    ^if __name__ == ['"]__main__['"]:$

[coverage:paths]
source = src/pytest_print
         .tox/*/lib/python*/site-packages/pytest_print
         .tox/pypy*/site-packages/pytest_print
         .tox\*\Lib\site-packages\pytest_print
         */src/pytest_print
         *\src\pytest_print

