[metadata]
name = pytest_print
description = pytest-print adds the printer fixture you can use to print messages to the user (directly to the pytest runner, not stdout)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pytest-dev/pytest-print#pytest-print
author = Bernat Gabor
maintainer = Bernat Gabor
maintainer_email = gaborjbernat@gmail.com
license = MIT
license_file = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = pytest, print, debug
project_urls =
    Source=https://github.com/pytest-dev/pytest-print
    Tracker=https://github.com/pytest-dev/pytest-print/issues

[options]
packages = find:
install_requires =
    pytest>=3.0.0
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
include_package_data = True
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[options.entry_points]
pytest11 = pytest_print = pytest_print

[options.extras_require]
test =
    coverage>=5
    pytest>=4

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[flake8]
max-line-length = 120
ignore = F401, H301, E203
